--- a/blog/templates/blog/full-article.html
+++ b/blog/templates/blog/full-article.html
@@ -148,7 +148,7 @@
                 </li>
               </ul>
 
-              <div class="tab-content" id="pills-tabContent">
+              {% comment %} <div class="tab-content" id="pills-tabContent">
 
                 <!-- Popular -->
                 {% for post in object_list %}
@@ -184,7 +184,7 @@
                 </div> <!-- End Latest -->
 
               </div>
-            </div>
+            </div> {% endcomment %}
 
          
 
