--- a/blog/templates/blog/full-article.html
+++ b/blog/templates/blog/full-article.html
@@ -146,6 +146,9 @@
                 <li class="nav-item" role="presentation">
                   <button class="nav-link" id="pills-latest-tab" data-bs-toggle="pill" data-bs-target="#pills-latest" type="button" role="tab" aria-controls="pills-latest" aria-selected="false">Latest</button>
                 </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="pills-latest-tab" data-bs-toggle="pill" data-bs-target="#pills-latest" type="button" role="tab" aria-controls="pills-latest" aria-selected="false">Latest</button>
+                </li>
               </ul>
 
               {% comment %} <div class="tab-content" id="pills-tabContent">
